<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorDivider"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp">


        <TextView
            android:id="@+id/row_ctwdate"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/datum"
            android:textColorHighlight="@color/colorIconsText"
            android:textColorLink="@color/colorTextSecondary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#454545"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/row_ctwimage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="end"
            android:contentDescription="@string/userbild" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/img1desc"
                    android:cropToPadding="false"
                    android:paddingTop="2dp"
                    app:srcCompat="@drawable/ic_baseline_cake_24" />

                <TextView
                    android:id="@+id/row_ctwreason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/grund"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/row_ctwwho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/wer"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/row_ctworg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/organisation" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
