<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_register_msg"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/etBenutzerName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/et_UserEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/spOrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:entries="@array/spOrgs"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:entries="@array/spTeams"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/etRegCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="Zugangscode"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <Button
            android:id="@+id/bu_saveregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="24dp"
            android:text="@string/next" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>